--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:fix": "yarn eslint --fix src --max-warnings=0 --ext=ts --ext=tsx && yarn prettier --write '**/*'"
   },
   "eslintConfig": {
     "extends": "react-app"
